fix: nav z-index

--- a/_sass/mod/_brandnav.scss
+++ b/_sass/mod/_brandnav.scss
@@ -72,8 +72,8 @@ nav a {
   width: var(--size);
   outline: none;
   transition:
-    border-color .25s ease,
-    background-color .25s ease;
+  border-color .25s ease,
+  background-color .25s ease;
 
   &:hover {
     border-color: hsla(328, 100%, 54%, 0.5);
@@ -139,12 +139,13 @@ article {
   padding: 2ch;
   border-radius: 1ch;
   box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.2);
+  width: 100%;
 
   & > * {
     margin: 0;
   }
 
-  & > p + :matches(h1,h2,h3,h4,h5,h6) {
+  & > p h1, & > p h2, & > p h3, & > p h4, & > p h5, & > p h6 {
     margin-top: 2ch;
   }
 }
